--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
     "bootstrap": "^3.3.6",
+    "electron-reload": "^1.1.0",
     "jquery.2": "^1.0.0",
     "level-js": "^2.2.4",
     "linvodb3": "^3.25.0",
