--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron-packager": "^7.0.4",
-    "electron-prebuilt": "^1.2.2"
+    "electron-prebuilt": "^1.2.2",
+    "typescript": "^2.2.2"
   },
   "dependencies": {
     "angular": "^1.5.6",
