--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
+    "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.7",
     "electron-reload": "^1.1.0",
     "jquery": "^3.2.1",
