--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/angular": "^1.6.14",
+    "@types/angular-route": "^1.3.3",
+    "@types/angular-ui-bootstrap": "^0.13.41",
+    "@types/bootstrap": "^3.3.32",
+    "@types/jquery": "^2.0.41",
+    "@types/q": "^1.0.0",
     "electron-packager": "^8.6.0",
     "electron-prebuilt": "^1.4.13",
     "typescript": "^2.2.2"
