--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "start-dev": "electron . debug",
+    "start-dev": "electron . debug & tsc -w",
     "package": "electron-packager ./ cattlebarn --all --out ~/Desktop/cattlebarn --version 1.2.2 --overwrite"
   },
   "author": "",
