--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
+    "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.6",
+    "electron": "^1.6.2",
     "jquery.2": "^1.0.0",
     "level-js": "^2.2.4",
     "linvodb3": "^3.25.0",
