--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager ./ cattlebarn --all --out ~/Desktop/cattlebarn --version 1.2.2 --overwrite"
+    "package": "electron-packager ./ cattlebarn --all --out build --overwrite"
   },
   "author": "",
   "license": "ISC",
