--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "bootstrap": "^3.3.7",
     "level-js": "^2.2.4",
     "linvodb3": "^3.25.0",
-    "q": "^1.5.0"
+    "q": "^1.5.0",
+    "react": "^15.5.3",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
+    "react-dom": "^15.5.3",
+    "reactstrap": "^4.5.0"
   }
 }
