--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "electron": "^1.6.2",
     "electron-packager": "^8.6.0",
     "electron-react-devtools": "^0.4.0",
-    "electron-reload": "^1.1.0"
+    "electron-reload": "^1.1.0",
+    "typescript": "^2.2.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
