--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typescript": "^2.2.2"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-alpha.6",
     "level-js": "^2.2.4",
     "linvodb3": "^3.25.0",
     "q": "^1.5.0",
