--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bootstrap": "^3.3.32",
+    "@types/q": "^1.0.0",
+    "@types/react": "^15.0.21",
+    "@types/react-addons-css-transition-group": "^15.0.1",
+    "@types/react-addons-transition-group": "^0.14.19",
+    "@types/react-dom": "^0.14.23",
+    "@types/reactstrap": "^4.3.1",
     "electron": "^1.6.2",
     "electron-packager": "^8.6.0",
     "electron-react-devtools": "^0.4.0",
