--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bootstrap": "^3.3.32",
+    "@types/jquery": "^2.0.41",
     "@types/q": "^1.0.0",
     "@types/react": "^15.0.21",
     "@types/react-addons-css-transition-group": "^15.0.1",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "jquery": "^3.2.1",
     "level-js": "^2.2.4",
     "linvodb3": "^3.25.0",
     "q": "^1.5.0",
