--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "start-dev": "electron . debug",
     "package": "electron-packager ./ cattlebarn --all --out build --overwrite"
   },
   "author": "",
