--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "start-dev": "electron . & debug tsc -w",
+    "start-dev": "electron . debug & tsc -w",
     "package": "electron-packager ./ cattlebarn --all --out build --overwrite"
   },
   "author": "",
@@ -31,10 +31,10 @@
     "level-js": "^2.2.4",
     "linvodb3": "^3.25.0",
     "q": "^1.5.0",
-    "react": "^15.5.3",
+    "react": "15.0",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
-    "react-dom": "^15.5.3",
+    "react-dom": "15.0",
     "reactstrap": "^4.5.0"
   }
 }
