--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^0.14.23",
     "@types/reactstrap": "^4.3.1",
     "electron": "^1.6.2",
+    "electron-builder": "^16.8.3",
     "electron-packager": "^8.6.0",
     "electron-react-devtools": "^0.4.0",
     "electron-reload": "^1.1.0",
