Add postinstall script
This allows us to easily use SQLite

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron .",
     "start-dev": "electron . debug & tsc -w",
-    "package": "electron-packager ./ cattlebarn --all --asar --out build --overwrite"
+    "package": "electron-packager ./ cattlebarn --all --asar --out build --overwrite",
+    "postinstall": "install-app-deps"
   },
   "author": "",
   "license": "ISC",
