--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bootstrap": "^3.3.32",
+    "@types/electron": "^1.4.35",
     "@types/jquery": "^2.0.41",
     "@types/node": "^7.0.12",
     "@types/q": "^1.0.0",
