--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bootstrap": "^3.3.32",
     "@types/electron": "^1.4.35",
     "@types/jquery": "^2.0.41",
+    "@types/lodash": "^4.14.63",
     "@types/node": "^7.0.12",
     "@types/q": "^1.0.0",
     "@types/react": "^15.0.21",
@@ -32,6 +33,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "15.0",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
