--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jquery": "^2.0.41",
     "@types/lodash": "^4.14.63",
     "@types/node": "^7.0.12",
+    "@types/node-notifier": "^0.0.28",
     "@types/q": "^1.0.0",
     "@types/react": "^15.0.21",
     "@types/react-addons-css-transition-group": "^15.0.1",
@@ -34,6 +35,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "node-notifier": "^5.1.2",
     "react": "15.0",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
