--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "electron .",
     "start-dev": "electron . debug & tsc -w",
     "package": "electron-packager ./ cattlebarn --all --asar --out build --overwrite",
+    "build": "build",
     "postinstall": "install-app-deps"
   },
   "author": "",
