Place reactstrap definitions in it's own folder
This way, mistakes in the reactstrap can still be fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "jsx": "react",
     "outDir": "app",
     "diagnostics": true,
-    "pretty": true
+    "pretty": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
   "include": [
     "src/**/*.ts",
