--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "node-notifier": "^5.1.2",
-    "react": "15.0",
+    "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
-    "react-dom": "15.0",
+    "react-dom": "^15.5.4",
     "reactstrap": "^4.5.0",
     "sqlite": "^2.5.0"
   }
